# gene-ranking-shootout

./: .gitignore  CHANGELOG.md  Makefile  README.md  setup.cfg
.github/workflows/: main.yml
docker/cada/: Dockerfile  build.sh
gene_ranking_shootout/: __init__.py  models.py  runner.py
gene_ranking_shootout/cli/: __init__.py
gene_ranking_shootout/data/: cada_all_cases.json  cada_cases_test.json  cada_cases_train.json  cada_cases_validate.json  cada_clinvar_cases.json  cada_collaborator_cases.json  gnomad_counts.tsv
tests/data/amelie/: query.json  response.json
tests/data/cada/: query.txt  result.txt
tests/data/phen2gene/: genes.txt  output_file.associated_gene_list
