# See here:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c
# https://github.com/pyscaffold/pyscaffold/blob/master/setup.cfg

[metadata]
# version is extracted from SCM tag by setuptools_scm
author = Manuel Holtgrewe
author_email = manuel.holtgrewe@bih-charite.de
description = Compare gene ranking methods.
home_page = https://github.com/bihealth/gene-ranking-shootout
name = gene-ranking-shootout

long_description_content_type = text/markdown; charset=UTF-8
long_description = file:README.rmd
license_files = LICENSE
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.
keywords =
    genes
    ranking


[options]
packages = find:
python_requires = >= 3.8
zip_safe = false
install_requires =
    attrs
    cattrs
    click
    loguru
    numpy
    requests
    tqdm

tests_require =
    pytest

[options.entry_points]
console_scripts =
    gene-ranking-shootout = gene_ranking_shootout.cli:main

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[build_sphinx]
all_files  = 1

[flake8]
exclude =
    docs
    clinvar_this/__init__.py
    versioneer.py
ignore = E203, E266, E501, W503
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9
